@@ -863,6 +863,10 @@ public class JabRefPreferences {
         defKeyBinds.put("Forward", "alt RIGHT");
         defKeyBinds.put("Import into current database", "ctrl I");
         defKeyBinds.put("Import into new database", "ctrl shift I");
+
+        defKeyBinds.put("Increase table font size", "ctrl PLUS");
+        defKeyBinds.put("Decrease table font size", "ctrl MINUS");
+
     }
 
     private String getNextUnit(Reader data) throws IOException {
