@@ -133,3 +133,6 @@ Fetch_CiteSeer_by_ID=Fetch_CiteSeer_by_ID
 Search_Medline=Search_Medline
 Import_from_external_SQL_database=Import_from_external_SQL_database
 Focus_entry_table=Focus_entry_table
+
+Increase_table_font_size=&Increase_table_font_size
+Decrease_table_font_size=&Decrease_table_font_size
